--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Modelo</title>
+    <title>Gerador de Senhas</title>
 </head>
 
 <body>
 
     <section class="container">
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis
-      maxime quos, doloribus vitae voluptatum quisquam necessitatibus
-      pariatur veritatis exercitationem beatae officiis suscipit Ea!
-        </p>
+        <h1>Gerador de Senhas</h1>
+        <div class="senha-gerada">Selecione as opções desejadas</div>
+        Quantidade de caracteres <input type="number" min="1" max="30"><br/>
+        Adicionar maiúsculas <input type="checkbox" class="chk-maiusculas"><br/>
+        Adicionar minúsculas <input type="checkbox" class="chk-maiusculas"><br/>
+        Adicionar números <input type="checkbox" class="chk-maiusculas"><br/>
+        Adicionar símbolos <input type="checkbox" class="chk-maiusculas"><br/>
+        <button class="gerar-senha">Gerar Senha</button>
     </section>
 
     <script src="./assets/js/bundle.js"></script>
