--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     <section class="container">
         <h1>Gerador de Senhas</h1>
         <div class="senha-gerada">Selecione as opções desejadas</div>
-        Quantidade de caracteres <input type="number" min="1" max="30"><br/>
+        Quantidade de caracteres <input type="number" min="1" max="30" value="20" class="qtd-caracteres"><br/>
         Adicionar maiúsculas <input type="checkbox" class="chk-maiusculas"><br/>
-        Adicionar minúsculas <input type="checkbox" class="chk-maiusculas"><br/>
-        Adicionar números <input type="checkbox" class="chk-maiusculas"><br/>
-        Adicionar símbolos <input type="checkbox" class="chk-maiusculas"><br/>
+        Adicionar minúsculas <input type="checkbox" class="chk-minusculas"><br/>
+        Adicionar números <input type="checkbox" class="chk-numeros"><br/>
+        Adicionar símbolos <input type="checkbox" class="chk-simbolos"><br/>
         <button class="gerar-senha">Gerar Senha</button>
     </section>
 
