--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <title>Gerador de Senhas</title>
 </head>
 
@@ -12,7 +13,12 @@
 
     <section class="container">
         <h1>Gerador de Senhas</h1>
-        <div class="senha-gerada">Selecione as opções desejadas</div>
+        <div class="senha-gerada">
+            Selecione as opções desejadas
+        </div>
+        <div class="senha-gerada">
+            <i class="far fa-copy fa-xs" onclick="copia()"></i>
+        </div>
         Quantidade de caracteres <input type="number" min="1" max="30" value="20" class="qtd-caracteres"><br/>
         Adicionar maiúsculas <input type="checkbox" class="chk-maiusculas"><br/>
         Adicionar minúsculas <input type="checkbox" class="chk-minusculas"><br/>
