--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,8 @@
     <section class="container">
         <h1>Gerador de Senhas</h1>
         <div class="senha-gerada">
-            Selecione as opções desejadas
-        </div>
-        <div class="senha-gerada">
-            <i class="far fa-copy fa-xs" onclick="copia()"></i>
+            <span>Selecione as opções desejadas</span>
+            <i class="far fa-copy fa-xs"></i>
         </div>
         Quantidade de caracteres <input type="number" min="1" max="30" value="20" class="qtd-caracteres"><br/>
         Adicionar maiúsculas <input type="checkbox" class="chk-maiusculas"><br/>
